Fix issue with main contaner overflow

--- a/wp-content/themes/markomilo/assets/stylesheets/layouts/_main.scss
+++ b/wp-content/themes/markomilo/assets/stylesheets/layouts/_main.scss
@@ -2,8 +2,6 @@
     display: grid;
     place-items: center;
 
-    @extend %body-height;
-
     &__content {
         display: flex;
         flex-direction: column;
